--- a/templates/domain/link/index.html.twig
+++ b/templates/domain/link/index.html.twig
@@ -3,7 +3,7 @@
 
 {% block header %}
     {% embed 'component/_header.html.twig' %}
-        {% block header_title "Tous les liens - header" %}
+        {% block header_title "Tous les liens" %}
         {% block header_action_list %}
             <li>
                 <a href="{{ path('app_link_new') }}" class="btn btn-white btn-dim btn-outline-light">
@@ -16,5 +16,29 @@
 
 {% block content %}
     {% embed 'component/_list.html.twig' with {_action: 'ajouter un lien', _path: path('app_link_new')} %}
+        {% block list_card_table_head %}
+            <th>Lien</th>
+            <th>Description</th>
+            <th>&nbsp;</th>
+        {% endblock %}
+        {% block list_card_table_body %}
+            {% for row in data %}
+                <tr>
+                    <td>
+                        <a href="{{ row.url }}" target="_blank">
+                            {{ row.url | u.truncate(50, '...') }}
+                        </a>
+                    </td>
+                    <td>{{ row.description | u.truncate(100, '...') }}</td>
+                    <td class="tb-odr-action">
+                        <div class="tb-odr-btns d-none d-md-inline">
+                            <a href="{{ path('app_link_show', {id: row.id}) }}" class="text-soft btn btn-icon btn-trigger" title="">
+                                {#{{ 'eye-alt-fill' | icon }}#} voir
+                            </a>
+                        </div>
+                    </td>
+                </tr>
+            {% endfor %}
+        {% endblock %}
     {% endembed %}
 {% endblock %}
