--- a/templates/component/_list.html.twig
+++ b/templates/component/_list.html.twig
@@ -32,7 +32,7 @@
             <div class="card-inner d-flex justify-content-center">
                 {% block list_card_pagination %}
                     {% if data is defined %}
-                       {# {{ knp_pagination_render(data) }}#}
+                       {{ knp_pagination_render(data, 'component/_pagination.html.twig') }}
                     {% endif %}
                 {% endblock %}
             </div>
